--- a/Makefile.am
+++ b/Makefile.am
@@ -5578,6 +5578,14 @@ plugin_LTLIBRARIES += $(core_plugins)
 TESTS += $(check_programs)
 
 EXTRA_DIST += \
+	\
+	AUTHORS \
+	COPYING \
+	ChangeLog \
+	INSTALL \
+	NEWS \
+	README.md \
+	\
 	CONTRIBUTING.md \
 	COPYING.LGPL \
 	COPYING.GFDL \
