gitlab-ci: archive log of test
Our test is long and verbose. The output gets truncated after
a few megabytes, but sometimes it's interesting to see what
happens afterwards. Redirect also to a file and archive it.

--- a/.gitlab-ci/ci.template
+++ b/.gitlab-ci/ci.template
@@ -144,8 +144,15 @@ variables:
 .build@template:
   stage: test
   script:
-    - .gitlab-ci/run-test.sh
+    - .gitlab-ci/run-test.sh 2>&1 | tee /tmp/nm-test.log
+  after_script:
+    - mv /tmp/nm-test.log . || true
   dependencies: []
+  artifacts:
+    expire_in: 5 days
+    paths:
+      - nm-build-log
+
 
 #################################################################
 #                                                               #
