--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,11 +47,11 @@ variables:
   #
   # This is done by running `ci-fairy generate-template` and possibly bump
   # ".default_tag".
-  FEDORA_TAG:  '2022-03-15.0-1c8fb45999e9'
-  UBUNTU_TAG:  '2022-03-15.0-f7d56c5dcd47'
-  DEBIAN_TAG:  '2022-03-15.0-f7d56c5dcd47'
-  CENTOS_TAG:  '2022-03-15.0-1c8fb45999e9'
-  ALPINE_TAG:  '2022-03-15.0-91803105505b'
+  FEDORA_TAG:  '2022-03-15.0-d607c4245652'
+  UBUNTU_TAG:  '2022-03-15.0-1dde99638439'
+  DEBIAN_TAG:  '2022-03-15.0-1dde99638439'
+  CENTOS_TAG:  '2022-03-15.0-d607c4245652'
+  ALPINE_TAG:  '2022-03-15.0-184bba8a6d85'
 
   FEDORA_EXEC: 'bash .gitlab-ci/fedora-install.sh'
   UBUNTU_EXEC: 'bash .gitlab-ci/debian-install.sh'
@@ -622,8 +622,15 @@ alpine:latest@container-clean:
 .build@template:
   stage: test
   script:
-    - .gitlab-ci/run-test.sh
+    - .gitlab-ci/run-test.sh 2>&1 | tee /tmp/nm-test.log
+  after_script:
+    - mv /tmp/nm-test.log . || true
   dependencies: []
+  artifacts:
+    expire_in: 5 days
+    paths:
+      - nm-build-log
+
 
 #################################################################
 #                                                               #
